Rescriere clase pentru a urma modelul java 13.